--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,6 +17,65 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="bottom"
+                android:orientation="horizontal"
+                android:paddingBottom="5sp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="75sp"
+                        android:layout_height="75sp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="DISLIKE"
+                        app:srcCompat="@drawable/ic_dislike"
+                        android:layout_marginLeft="50sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="75sp"
+                        android:layout_height="75sp"
+                        android:text="LIKE"
+                        app:srcCompat="@drawable/ic_like"
+                        android:layout_marginRight="50sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/mainTagsRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="45sp"
+                android:orientation="horizontal"
+                tools:listitem="@layout/item_tags" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout_cards"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
@@ -52,35 +111,25 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/relativeLayout_tags"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/mainTagsRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="45sp"
-                android:orientation="horizontal"
-                tools:listitem="@layout/item_tags" />
+            android:layout_height="45sp"
+            android:orientation="horizontal"
+            android:onClick="emptyFunction">
         </RelativeLayout>
 
-
         <RelativeLayout
+            android:id="@+id/relativeLayout_buttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true">
-
-            <View
-                android:id="@+id/empty_field"
-                android:layout_width="wrap_content"
-                android:onClick="emptyFunction"
-                android:layout_height="75sp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:gravity="bottom"
+                android:onClick="emptyFunction"
                 android:orientation="horizontal"
                 android:paddingBottom="5sp">
 
@@ -96,7 +145,6 @@
                         android:layout_height="75sp"
                         android:layout_gravity="center_horizontal"
                         android:text="DISLIKE"
-                        app:srcCompat="@drawable/ic_dislike"
                         android:layout_marginLeft="50sp"/>
                 </LinearLayout>
 
@@ -111,11 +159,11 @@
                         android:layout_width="75sp"
                         android:layout_height="75sp"
                         android:text="LIKE"
-                        app:srcCompat="@drawable/ic_like"
                         android:layout_marginRight="50sp" />
                 </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
+
     </RelativeLayout>
 </LinearLayout>
 
