--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -59,35 +59,39 @@
                 android:textSize="20sp"
                 tools:text="tags" />
         </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="500sp">
+            android:layout_height="match_parent"
+            android:paddingBottom="82sp">
+
             <ImageView
                 android:id="@+id/star_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="0sp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
-                app:srcCompat="@drawable/ic_star"
-                android:visibility="invisible"/>
+                android:padding="0sp"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_star" />
 
             <ImageView
                 android:id="@+id/dislike_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="20sp"
                 android:layout_alignParentRight="true"
-                app:srcCompat="@drawable/ic_cancel"
-                android:visibility="invisible"/>
+                android:padding="20sp"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_cancel" />
+
             <ImageView
                 android:id="@+id/like_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="20sp"
                 android:layout_alignParentLeft="true"
-                app:srcCompat="@drawable/ic_heart"
-                android:visibility="invisible"/>
+                android:padding="20sp"
+                android:visibility="invisible"
+                app:srcCompat="@drawable/ic_heart" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
