--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -24,7 +24,7 @@
         android:paddingRight="10sp"
         android:scaleX="1.25"
         android:scaleY="1.25"
-        android:src="@drawable/ic_back_arrow" />
+        app:srcCompat="@drawable/ic_back_arrow" />
 
     <LinearLayout
         android:id="@+id/userLayout"
