--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loginActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="50sp"
-    tools:context="com.pinder.app.RegistrationActivity"
-    android:id="@+id/loginActivity">
+    tools:context="com.pinder.app.RegistrationActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,81 +16,99 @@
         <LinearLayout
             android:id="@+id/mainLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/regulationsTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingBottom="15sp"
-                android:text="By logging in you accept our Terms and Privacy Policy."
-                android:textAlignment="center"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/emailTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Email:"
-                android:textSize="12sp" />
-
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:inputType="text"
-                android:paddingTop="2sp" />
-
-            <TextView
-                android:id="@+id/passwordTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5sp"
-                android:text="Password:"
-                android:textSize="12sp" />
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:paddingTop="2sp" />
-
-            <Button
-                android:id="@+id/login"
-                android:layout_width="match_parent"
-                android:layout_height="30sp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="2sp"
-                android:layout_marginRight="2sp"
-                android:background="@drawable/rounded_button"
-                android:text="LOGIN" />
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/registerTextView"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/regulationsTextView"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="5sp"
-                    android:text="Register with email? Click HERE." />
-            </LinearLayout>
-
+                    android:gravity="center"
+                    android:paddingBottom="15sp"
+                    android:text="By logging in you accept our Terms and Privacy Policy."
+                    android:textAlignment="center"
+                    android:textSize="12sp" />
+                <Button
+                    android:id="@+id/continue_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Continue with email" />
             <LinearLayout
+                android:id="@+id/continue_email_parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="20sp">
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:id="@+id/continue_email_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="true"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/emailTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email:"
+                    android:textSize="12sp" />
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Email"
+                    android:inputType="text"
+                    android:paddingTop="2sp" />
+
+                <TextView
+                    android:id="@+id/passwordTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5sp"
+                    android:text="Password:"
+                    android:textSize="12sp" />
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingTop="2sp" />
+
+                <Button
+                    android:id="@+id/login"
+                    android:layout_width="match_parent"
+                    android:layout_height="30sp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="2sp"
+                    android:layout_marginRight="2sp"
+                    android:background="@drawable/rounded_button"
+                    android:text="LOGIN" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/registerTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5sp"
+                        android:text="Register with email? Click HERE." />
+                </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
                 <com.facebook.login.widget.LoginButton
-                    android:id="@+id/login_button"
+                    android:id="@+id/continue_fb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -103,7 +121,7 @@
                     android:textSize="15sp" />
 
                 <com.google.android.gms.common.SignInButton
-                    android:id="@+id/sign_in_button"
+                    android:id="@+id/continue_google"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -120,13 +138,13 @@
                 android:layout_weight="1">
 
                 <ImageView
-                    android:scaleX="0.75"
-                    android:scaleY="0.75"
                     android:id="@+id/smallLogo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="bottom|center"
                     android:paddingTop="20sp"
+                    android:scaleX="0.75"
+                    android:scaleY="0.75"
                     app:srcCompat="@drawable/ic_logovector" />
             </LinearLayout>
         </LinearLayout>
