--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="50sp"
+    android:paddingLeft="50sp"
+    android:paddingRight="50sp"
+    android:paddingTop="50sp"
+    android:paddingBottom="10sp"
     tools:context="com.pinder.app.RegistrationActivity">
 
     <RelativeLayout
@@ -18,7 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
+            <TextView
+                android:id="@+id/logo_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pinder"
+                android:layout_gravity="center"
+                android:paddingBottom="15dp"
+                android:textSize="48sp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,16 +43,12 @@
                     android:text="By logging in you accept our Terms and Privacy Policy."
                     android:textAlignment="center"
                     android:textSize="12sp" />
+
                 <Button
                     android:id="@+id/continue_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Continue with email" />
-            <LinearLayout
-                android:id="@+id/continue_email_parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/continue_email_layout"
@@ -52,61 +58,61 @@
                     android:orientation="vertical"
                     android:visibility="gone">
 
-                <TextView
-                    android:id="@+id/emailTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Email:"
-                    android:textSize="12sp" />
-
-                <EditText
-                    android:id="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Email"
-                    android:inputType="text"
-                    android:paddingTop="2sp" />
-
-                <TextView
-                    android:id="@+id/passwordTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5sp"
-                    android:text="Password:"
-                    android:textSize="12sp" />
-
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:paddingTop="2sp" />
-
-                <Button
-                    android:id="@+id/login"
-                    android:layout_width="match_parent"
-                    android:layout_height="30sp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="2sp"
-                    android:layout_marginRight="2sp"
-                    android:background="@drawable/rounded_button"
-                    android:text="LOGIN" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
                     <TextView
-                        android:id="@+id/registerTextView"
+                        android:id="@+id/emailTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="5sp"
-                        android:text="Register with email? Click HERE." />
+                        android:text="Email:"
+                        android:textSize="12sp" />
+
+                    <EditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Email"
+                        android:inputType="text"
+                        android:paddingTop="2sp" />
+
+                    <TextView
+                        android:id="@+id/passwordTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5sp"
+                        android:text="Password:"
+                        android:textSize="12sp" />
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:paddingTop="2sp" />
+
+                    <Button
+                        android:id="@+id/login"
+                        android:layout_width="match_parent"
+                        android:layout_height="30sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="2sp"
+                        android:layout_marginRight="2sp"
+                        android:background="@drawable/rounded_button"
+                        android:text="LOGIN" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/registerTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="5sp"
+                            android:text="Register with email? Click HERE." />
+                    </LinearLayout>
                 </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
+
                 <com.facebook.login.widget.LoginButton
                     android:id="@+id/continue_fb"
                     android:layout_width="match_parent"
@@ -126,9 +132,39 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:paddingBottom="5sp"
                     android:layout_weight="1"
                     android:textSize="15sp" />
+
+                <Button
+                    android:id="@+id/continue_with_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Continue with phone" />
+
+                <LinearLayout
+                    android:id="@+id/continue_with_phone_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/phone_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Phone number:"
+                        android:textSize="12sp" />
+
+                    <EditText
+                        android:id="@+id/phone_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Phone number:"
+                        android:inputType="phone"
+                        android:autofillHints="phoneNational"
+                        android:paddingTop="2sp" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -153,7 +189,8 @@
             android:id="@+id/logoLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/bigLogo"
