--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="50sp"
-    android:paddingRight="50sp"
+    android:paddingLeft="40sp"
+    android:paddingRight="40sp"
     android:paddingTop="50sp"
     android:paddingBottom="10sp"
     tools:context="com.pinder.app.RegistrationActivity">
@@ -32,6 +32,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="3sp"
+                android:paddingRight="3sp"
                 android:orientation="vertical">
 
                 <TextView
@@ -39,6 +41,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:paddingRight="10sp"
+                    android:paddingLeft="10sp"
                     android:paddingBottom="15sp"
                     android:text="By logging in you accept our Terms and Privacy Policy."
                     android:textAlignment="center"
@@ -47,10 +51,15 @@
                 <Button
                     android:id="@+id/continue_email"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Continue with email"
+                    android:layout_height="40sp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="20dp"
+                    android:layout_margin="2sp"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/login_email"
+                    android:drawableStart="@drawable/ic_login_mail"
                     android:drawableLeft="@drawable/ic_login_mail"
-                    android:drawableStart="@drawable/ic_login_mail"/>
+                    android:text="Continue with email" />
 
                 <LinearLayout
                     android:id="@+id/continue_email_layout"
@@ -58,7 +67,8 @@
                     android:layout_height="wrap_content"
                     android:animateLayoutChanges="true"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    android:layout_marginBottom="5sp">
 
                     <TextView
                         android:id="@+id/emailTextView"
@@ -114,30 +124,55 @@
                             android:text="Register with email? Click HERE." />
                     </LinearLayout>
                 </LinearLayout>
-                
+
                 <Button
                     android:id="@+id/continue_facebook"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40sp"
                     android:text="Continue with facebook"
-                    android:drawableLeft="@drawable/ic_login_facebook"
-                    android:drawableStart="@drawable/ic_login_facebook" />
+                    android:textColor="#ffffff"
+                    android:background="@drawable/login_facebook"
+                    android:drawableLeft="@drawable/ic_login_facebook_white"
+                    android:drawableStart="@drawable/ic_login_facebook_white"
+                    android:layout_marginTop="10sp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="20dp"
+                    android:layout_marginBottom="10sp"
+                    />
 
-                <com.google.android.gms.common.SignInButton
+                <Button
                     android:id="@+id/continue_google"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    android:paddingBottom="5sp"
-                    android:layout_weight="1"
-                    android:textSize="15sp" />
+                    android:layout_height="40sp"
+                    android:textColor="#ffffff"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="20dp"
+                    android:layout_marginBottom="10sp"
+                    android:background="@drawable/login_google"
+                    android:text="Continue with Google"
+                    android:drawableLeft="@drawable/ic_logo_google_white"
+                    android:drawableStart="@drawable/ic_logo_google_white" />
+
+<!--                <com.google.android.gms.common.SignInButton-->
+<!--                    android:id="@+id/continue_google"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center_horizontal"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:paddingBottom="5sp"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:textSize="15sp" />-->
 
                 <Button
                     android:id="@+id/continue_with_phone"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40sp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="20dp"
+                    android:layout_marginBottom="10sp"
+                    android:background="@drawable/login_phone"
                     android:text="Continue with phone"
+                    android:textColor="#ffffff"
                     android:drawableLeft="@drawable/ic_login_phone"
                     android:drawableStart="@drawable/ic_login_phone" />
 
@@ -159,11 +194,58 @@
                         android:id="@+id/phone_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Phone number:"
+                        android:hint="+00 123456789"
                         android:inputType="phone"
                         android:autofillHints="phoneNational"
                         android:paddingTop="2sp" />
+
+                    <Button
+                        android:id="@+id/send_phone_auth"
+                        android:layout_width="match_parent"
+                        android:layout_height="30sp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="2sp"
+                        android:layout_marginRight="2sp"
+                        android:background="@drawable/rounded_button"
+                        android:layout_marginBottom="5sp"
+                        android:text="Send" />
+                    <LinearLayout
+                        android:id="@+id/phone_verification_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:id="@+id/phone_verification_text_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Enter verification code:"
+                            android:textSize="12sp" />
+
+                        <EditText
+                            android:id="@+id/phone_verification_edit_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="000000"
+                            android:inputType="phone"
+                            android:maxLength="10"
+                            android:autofillHints="phoneNational"
+                            android:paddingTop="2sp" />
+
+                        <Button
+                            android:id="@+id/phone_verification_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="30sp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="2sp"
+                            android:layout_marginRight="2sp"
+                            android:background="@drawable/rounded_button"
+                            android:layout_marginBottom="5sp"
+                            android:text="Verify" />
+                    </LinearLayout>
                 </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
