--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="40sp"
-    android:paddingRight="40sp"
+    android:paddingLeft="30sp"
+    android:paddingRight="30sp"
     android:paddingTop="50sp"
     android:paddingBottom="10sp"
     tools:context="com.pinder.app.RegistrationActivity">
@@ -15,6 +15,17 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingBottom="0dp"
+            android:scaleX="0.2"
+            android:scaleY="0.2"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/mainLayout"
@@ -32,8 +43,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="3sp"
-                android:paddingRight="3sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
                 android:orientation="vertical">
 
                 <TextView
@@ -41,8 +52,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:paddingRight="10sp"
-                    android:paddingLeft="10sp"
+                    android:paddingRight="13sp"
+                    android:paddingLeft="13sp"
                     android:paddingBottom="15sp"
                     android:text="By logging in you accept our Terms and Privacy Policy."
                     android:textAlignment="center"
@@ -52,9 +63,10 @@
                     android:id="@+id/continue_email"
                     android:layout_width="match_parent"
                     android:layout_height="40sp"
+                    android:layout_marginLeft="6sp"
+                    android:layout_marginRight="6sp"
                     android:paddingLeft="10dp"
                     android:paddingRight="20dp"
-                    android:layout_margin="2sp"
                     android:textColor="#ffffff"
                     android:background="@drawable/login_email"
                     android:drawableStart="@drawable/ic_login_mail"
@@ -66,6 +78,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:animateLayoutChanges="true"
+                    android:layout_marginTop="5sp"
+                    android:layout_marginLeft="6sp"
+                    android:layout_marginRight="6sp"
                     android:orientation="vertical"
                     android:visibility="gone"
                     android:layout_marginBottom="5sp">
@@ -135,6 +150,8 @@
                     android:drawableLeft="@drawable/ic_login_facebook_white"
                     android:drawableStart="@drawable/ic_login_facebook_white"
                     android:layout_marginTop="10sp"
+                    android:layout_marginLeft="6sp"
+                    android:layout_marginRight="6sp"
                     android:paddingLeft="10dp"
                     android:paddingRight="20dp"
                     android:layout_marginBottom="10sp"
@@ -148,6 +165,8 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="20dp"
                     android:layout_marginBottom="10sp"
+                    android:layout_marginLeft="6sp"
+                    android:layout_marginRight="6sp"
                     android:background="@drawable/login_google"
                     android:text="Continue with Google"
                     android:drawableLeft="@drawable/ic_logo_google_white"
@@ -169,7 +188,9 @@
                     android:layout_height="40sp"
                     android:paddingLeft="10dp"
                     android:paddingRight="20dp"
-                    android:layout_marginBottom="10sp"
+                    android:layout_marginBottom="5sp"
+                    android:layout_marginLeft="6sp"
+                    android:layout_marginRight="6sp"
                     android:background="@drawable/login_phone"
                     android:text="Continue with phone"
                     android:textColor="#ffffff"
@@ -181,6 +202,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_marginLeft="6sp"
+                    android:layout_marginRight="6sp"
                     android:visibility="gone">
 
                     <TextView
