--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -6,4 +6,8 @@
         android:bottomLeftRadius="20sp"
         android:topRightRadius="20sp"
         android:topLeftRadius="20sp"/>
+    <stroke
+        android:width="1dp"
+        android:color="#D8D8D8"
+        />
 </shape>
