--- a/app/src/main/res/layout/fragment_external_register.xml
+++ b/app/src/main/res/layout/fragment_external_register.xml
@@ -3,29 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="50sp"
-    tools:context="com.pinder.app.RegistrationActivity">
-    <ImageView
-        android:id="@+id/back_arrow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17sp"
-        android:paddingLeft="21sp"
-        android:paddingRight="10sp"
-        android:scaleX="1.25"
-        android:scaleY="1.25"
-        app:srcCompat="@drawable/ic_back_arrow" />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:hint="Please fill all the informations"
-        android:paddingBottom="20sp"
-        android:textSize="15sp" />
+    tools:context=".ExternalRegisterFragment"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,42 +64,6 @@
             android:text="Female" />
     </RadioGroup>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email:"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10sp"
-        android:hint="Email"
-        android:inputType="text"
-        android:paddingTop="2sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password:"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingTop="2sp" />
-
-    <EditText
-        android:id="@+id/repeatpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Repeat password"
-        android:inputType="textPassword" />
-
     <Button
         android:id="@+id/register"
         android:layout_width="150sp"
@@ -128,6 +71,6 @@
         android:layout_gravity="center"
         android:layout_marginTop="10sp"
         android:background="@drawable/rounded_button"
-        android:text="Register">
-    </Button>
+        android:text="Register" />
+
 </LinearLayout>
