--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".RegistrationActivity"
     android:orientation="vertical"
-    android:padding="50sp"
-    tools:context="com.pinder.app.RegistrationActivity">
+    android:paddingLeft="30sp"
+    android:paddingRight="30sp"
+    android:paddingTop="50sp"
+    android:paddingBottom="10sp">
     <ImageView
         android:id="@+id/back_arrow"
         android:layout_width="wrap_content"
@@ -16,118 +19,43 @@
         android:paddingRight="10sp"
         android:scaleX="1.25"
         android:scaleY="1.25"
+        android:visibility="gone"
         app:srcCompat="@drawable/ic_back_arrow" />
-
+    <TextView
+        android:id="@+id/logo_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pinder"
+        android:layout_gravity="center"
+        android:paddingBottom="15dp"
+        android:textSize="48sp"/>
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:hint="Please fill all the informations"
-        android:paddingBottom="20sp"
+        android:paddingBottom="15sp"
         android:textSize="15sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name:"
-        android:textSize="12sp" />
 
-    <EditText
-        android:id="@+id/name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10sp"
-        android:hint="Name"
-        android:inputType="textPersonName"
-        android:paddingTop="2sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date of birth:"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="DD/MM/YYYY"
-        android:inputType="date"
-        android:paddingTop="2sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:text="Gender:"
-        android:textSize="12sp" />
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0sp"
-        android:layout_marginBottom="10sp"
-        android:orientation="horizontal">
-
-        <RadioButton
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <FrameLayout
+            android:id="@+id/register_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/smallLogo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Male" />
+            android:layout_gravity="bottom|center"
+            android:paddingTop="20sp"
+            android:scaleX="0.75"
+            android:scaleY="0.75"
+            app:srcCompat="@drawable/ic_logovector" />
+    </LinearLayout>
 
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Female" />
-    </RadioGroup>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email:"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10sp"
-        android:hint="Email"
-        android:inputType="text"
-        android:paddingTop="2sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password:"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingTop="2sp" />
-
-    <EditText
-        android:id="@+id/repeatpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Repeat password"
-        android:inputType="textPassword" />
-
-    <Button
-        android:id="@+id/register"
-        android:layout_width="150sp"
-        android:layout_height="30sp"
-        android:layout_gravity="center"
-        android:layout_marginTop="10sp"
-        android:background="@drawable/rounded_button"
-        android:text="Register">
-    </Button>
 </LinearLayout>
