--- a/app/src/main/res/layout/fragment_registration_phone.xml
+++ b/app/src/main/res/layout/fragment_registration_phone.xml
@@ -3,12 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context="com.pinder.app.RegistrationActivity">
-
-
-
+    tools:context=".RegistrationPhoneFragment"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -68,42 +64,6 @@
             android:text="Female" />
     </RadioGroup>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email:"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10sp"
-        android:hint="Email"
-        android:inputType="text"
-        android:paddingTop="2sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password:"
-        android:textSize="12sp" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:paddingTop="2sp" />
-
-    <EditText
-        android:id="@+id/repeatpassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Repeat password"
-        android:inputType="textPassword" />
-
     <Button
         android:id="@+id/register"
         android:layout_width="150sp"
@@ -111,6 +71,6 @@
         android:layout_gravity="center"
         android:layout_marginTop="10sp"
         android:background="@drawable/rounded_button"
-        android:text="Register">
-    </Button>
+        android:text="Register" />
+
 </LinearLayout>
