--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -23,7 +23,7 @@
         android:layout_marginLeft="20sp"
         android:layout_marginTop="10sp"
         android:layout_marginRight="20sp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/view_rounded_button"
         android:orientation="horizontal"
         android:visibility="invisible">
 
