--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -199,7 +199,7 @@
             android:layout_marginLeft="100sp"
             android:layout_marginTop="15sp"
             android:layout_marginRight="100sp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/view_rounded_button"
             android:text="unmatch"
             android:visibility="invisible" />
 
