--- a/app/src/main/res/layout/continue_my_mayout.xml
+++ b/app/src/main/res/layout/continue_my_mayout.xml
@@ -45,7 +45,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="2sp"
             android:layout_marginRight="2sp"
-            android:background="@drawable/rounded_button"
+            android:background="@drawable/view_rounded_button"
             android:text="LOGIN" />
 
         <LinearLayout
