--- a/app/src/main/res/drawable/view_my_chat.xml
+++ b/app/src/main/res/drawable/view_my_chat.xml
@@ -1,12 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-
-    <corners
-        android:bottomLeftRadius="20sp"
-        android:topLeftRadius="20sp"
-        android:topRightRadius="20sp"
-        android:bottomRightRadius="5sp"/>
-
-
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="#EE86B2CF"
+    tools:targetApi="lollipop">
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="#EE1C80CC" />
+            <corners
+                android:bottomLeftRadius="20sp"
+                android:bottomRightRadius="5sp"
+                android:topLeftRadius="20sp"
+                android:topRightRadius="20sp" />
+        </shape>
+    </item>
+</ripple>
