--- a/app/src/main/res/drawable/view_other_chat.xml
+++ b/app/src/main/res/drawable/view_other_chat.xml
@@ -1,10 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <corners
-        android:bottomRightRadius="20sp"
-        android:topLeftRadius="20sp"
-        android:topRightRadius="20sp"
-        android:bottomLeftRadius="5sp"/>
-
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="#EEFFFFFF"
+    tools:targetApi="lollipop">
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="#EECACACA" />
+            <corners
+                android:bottomLeftRadius="5sp"
+                android:topLeftRadius="20sp"
+                android:topRightRadius="20sp"
+                android:bottomRightRadius="20sp"/>
+        </shape>
+    </item>
+</ripple>
