--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="2sp">
 
     <LinearLayout
-        android:id="@+id/container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:padding="2sp"
-        android:radius="25sp">
+        android:layout_width="0sp"
+        android:layout_height="match_parent"
+        android:layout_weight="10"
+        android:gravity="left"
+        android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/chatImage"
             android:layout_width="50sp"
             android:layout_height="50sp"
-            android:padding="5sp"
+            android:layout_gravity="bottom"
+            android:layout_marginRight="5sp"
             android:src="@drawable/ic_profile_hq" />
 
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="17dp"
+        <LinearLayout
+            android:id="@+id/container"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="5sp"
-            android:paddingBottom="0sp"
-            android:text="Text"
-            android:textSize="15sp" />
+            android:layout_marginRight="55sp"
+            android:background="@drawable/view_other_chat"
+            android:gravity="center"
+            android:minWidth="20sp"
+            android:minHeight="50sp">
 
+            <TextView
+                android:id="@+id/message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp"
+                android:text="TekjjkjkghgjjjjjjjjjjjjjjjjjjjjjjjjjdffdsfdfdsfdsfdsfsdfFADFADFASDDdfdfdsfdsfdsfsaddsadsadsdasdsadsadsdasdasdsadsdassdasdasdjjjjjjjjjjjjjjxt"
+                android:textColor="@android:color/black"
+                android:textSize="15sp" />
+        </LinearLayout>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0sp"
+        android:layout_height="match_parent"
+        android:layout_weight="2" />
 </LinearLayout>
