Updated chat message edit text, created on message click listeners

--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -20,10 +20,11 @@
             android:id="@+id/container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="55sp"
+            android:layout_marginLeft="15sp"
             android:background="@drawable/view_my_chat"
             android:gravity="center"
             android:minWidth="20sp"
+            android:layout_marginRight="5dp"
             android:minHeight="50sp">
 
             <TextView
@@ -33,7 +34,8 @@
                 android:layout_margin="10sp"
                 android:text="TekjjkjkghgjjjjjjjjjjjjjjjjjjjjjjjjjdffdsfdfdsfdsfdsfsdfFADFADFASDDdfdfdsfdsfdsfsaddsadsadsdasdsadsadsdasdasdsadsdassdasdasdjjjjjjjjjjjjjjxt"
                 android:textColor="@android:color/white"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                />
         </LinearLayout>
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -42,6 +44,7 @@
             android:layout_height="50sp"
             android:layout_gravity="bottom"
             android:layout_marginLeft="5sp"
+            android:visibility="gone"
             android:src="@drawable/ic_profile_hq" />
     </LinearLayout>
 </LinearLayout>
