--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -1,14 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.LocationFragment">
+    android:layout_gravity="center_horizontal"
+    android:orientation="vertical"
+    tools:context="com.pinder.app.ui.LocationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <fragment
+        android:id="@+id/google_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+    <LinearLayout
+        android:id="@+id/userLayout"
+        android:layout_width="match_parent"
+        android:layout_height="75sp"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginRight="20sp"
+        android:background="@drawable/view_rounded_button"
+        android:orientation="horizontal"
+        android:visibility="invisible">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileImage"
+            android:layout_width="75sp"
+            android:layout_height="75sp"
+            android:padding="10sp"
+            android:src="@drawable/ic_profile_hq" />
+
+        <TextView
+            android:id="@+id/MatchName"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="Match's Name"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/goToChat"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_gravity="center|end"
+            android:layout_marginRight="20sp"
+            android:layout_weight="0"
+            app:srcCompat="@drawable/ic_chat" />
+
+    </LinearLayout>
+    <!--    <Button-->
+    <!--        android:id="@+id/back_arrow"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:visibility="gone"-->
+    <!--        android:text="back"/>-->
+    <ImageView
+        android:id="@+id/back_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17sp"
+        android:paddingLeft="21sp"
+        android:paddingRight="10sp"
+        android:scaleX="1.25"
+        android:scaleY="1.25"
+        android:src="@drawable/ic_back_arrow"
+        android:paddingEnd="10sp"
+        android:paddingStart="21sp" />
+
+</RelativeLayout>
