--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/chatFragment">
+    app:startDestination="@id/mainFragmentManager2">
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.pinder.app.ui.ChatFragment"
-        android:label="ChatFragment" >
+        android:label="ChatFragment">
         <action
             android:id="@+id/action_chatFragment_to_userProfileFragment"
             app:destination="@id/userProfileFragment" />
@@ -16,13 +16,67 @@
         android:id="@+id/matchesFragment"
         android:name="com.pinder.app.ui.MatchesFragment"
         android:label="fragment_matches"
-        tools:layout="@layout/fragment_matches" >
+        tools:layout="@layout/fragment_matches">
         <action
             android:id="@+id/action_matchesFragment_to_chatFragment"
             app:destination="@id/chatFragment" />
+        <action
+            android:id="@+id/action_matchesFragment_to_locationFragment"
+            app:destination="@id/locationFragment" />
     </fragment>
     <fragment
         android:id="@+id/userProfileFragment"
         android:name="com.pinder.app.ui.UserProfileFragment"
         android:label="UserProfileFragment" />
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.pinder.app.ui.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/action_mainFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.pinder.app.ui.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.pinder.app.ui.ProfileFragment"
+        android:label="ProfileFragment" />
+    <fragment
+        android:id="@+id/tagsFragment2"
+        android:name="com.pinder.app.ui.TagsFragment"
+        android:label="fragment_tags"
+        tools:layout="@layout/fragment_tags" />
+    <fragment
+        android:id="@+id/locationFragment"
+        android:name="com.pinder.app.ui.LocationFragment"
+        android:label="fragment_location"
+        tools:layout="@layout/fragment_location">
+        <action
+            android:id="@+id/action_locationFragment_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
+        <action
+            android:id="@+id/action_locationFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/mainFragmentManager2"
+        android:name="com.pinder.app.ui.MainFragmentManager"
+        android:label="fragment_main_fragment_manager"
+        tools:layout="@layout/fragment_main_fragment_manager" >
+        <action
+            android:id="@+id/action_mainFragmentManager2_to_locationFragment"
+            app:destination="@id/locationFragment"
+            app:enterAnim="@anim/slide_up"
+            app:exitAnim="@anim/scale"
+            app:launchSingleTop="true"
+            app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_mainFragmentManager2_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
+    </fragment>
 </navigation>
